--- a/src/components/OTP/index.css
+++ b/src/components/OTP/index.css
@@ -28,6 +28,17 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
 }
+.otp-link{
+    color: 
+    #F7B348;
+    font-family: Work Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+margin:10px 0px 10px 0px;
+
+}
 section{
     display: flex;
     flex-direction: row;
